Rename stuff, UI improvements

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sombra",
+  "name": "whohackedme",
   "description": "Instantly search the web for hacked data.",
   "scripts": {
     "dev": "next",
